welcome.lessons.welcome.loopdowhile.Poucet2.scala.code
var biscuit=0
while(!SortieTrouvee()){
	do{avance()
  	if (estSurBiscuit){biscuit=biscuit+1}
  	}while(crossing)
}
avance()